--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: page
 ---
 
 <ul class="listing">
+[置顶 项目列表](http://lxiongh.github.io/2014/08/15/IBM_Machine_Query_Robot/)
+
 {% for post in paginator.posts %}
   {% capture y %}{{post.date | date:"%Y"}}{% endcapture %}
   {% if year != y %}
