--- a/_posts/2014.08/2014-08-18-Project_list.html
+++ b/_posts/2014.08/2014-08-18-Project_list.html
@@ -87,14 +87,11 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
 <div class="container">
   <div class="content">
     <h2>
-      <span><a title="项目" class="" href="/project.htm">项目</a></span>
-      <span><a title="博客" class="" href="/">博客</a></span>
+      <span><a title="项目" class="" href="/">项目</a></span>
       <span><a title="分类" class="" href="/categories/">分类</a></span>
       <span><a title="标签" class="" href="/tags/">标签</a></span>
       <span><a title="链接" class="" href="/links/">链接</a></span>
-      <span><a title="留言" class="" href="/guestbook/">留言</a></span>
       <span><a title="关于" class="" href="/about/">关于</a></span>
-      <span><a title="订阅 by RSS" class="" href="/feed/">订阅</a></span>
     </h2>
     <p>
       <input type="image" name="imageField" id="imageField" src="http://lxiongh.qiniudn.com/water_mark.png" />
