--- a/index.html
+++ b/index.html
@@ -86,17 +86,11 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
 
 <div class="container">
   <div class="content">
-    <h2>
-      <span><a title="项目" class="" href="/">项目</a></span>
-      <span><a title="分类" class="" href="/categories/">分类</a></span>
-      <span><a title="标签" class="" href="/tags/">标签</a></span>
-      <span><a title="链接" class="" href="/links/">链接</a></span>
-      <span><a title="关于" class="" href="/about/">关于</a></span>
-    </h2>
     <p>
       <input type="image" name="imageField" id="imageField" src="http://lxiongh.qiniudn.com/water_mark.png" />
+      <span><a title="主页" class="" href="/">主页</a></span> <span><a title="分类" class="" href="/categories/">分类</a></span> <span><a title="标签" class="" href="/tags/">标签</a></span> <span><a title="链接" class="" href="/links/">链接</a></span> <span><a title="关于" class="" href="/about/">关于</a></span>
     </p>
-    <hr />
+     <hr />
     <h2><strong></strong>图像处理</h2>
     <table width="100%" border="1">
       <tr>
