--- a/_posts/2014.08/2014-8-18-Project_list.html
+++ b/_posts/2014.08/2014-8-18-Project_list.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>项目汇总信息</title>
+<title>lxiongh' projects</title>
 <style type="text/css">
 <!--
 body {
@@ -86,13 +86,11 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
 
 <div class="container">
   <div class="content">
-    <h2>
-      <span><a title="主页" class="" href="/">主页</a></span> <span><a title="分类" class="" href="/categories/">分类</a></span> <span><a title="标签" class="" href="/tags/">标签</a></span> <span><a title="链接" class="" href="/links/">链接</a></span> <span><a title="关于" class="" href="/about/">关于</a></span>      <span><a title="关于" class="" href="/about/">关于</a></span>
-    </h2>
     <p>
       <input type="image" name="imageField" id="imageField" src="http://lxiongh.qiniudn.com/water_mark.png" />
+      <span><a title="主页" class="" href="/">主页</a></span> <span><a title="分类" class="" href="/categories/">分类</a></span> <span><a title="标签" class="" href="/tags/">标签</a></span> <span><a title="链接" class="" href="/links/">链接</a></span> <span><a title="关于" class="" href="/about/">关于</a></span>
     </p>
-    <hr />
+     <hr />
     <h2><strong></strong>图像处理</h2>
     <table width="100%" border="1">
       <tr>
