--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
     </tr>
   </table>
   <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <hr />
+  <p>All rights reserved by Liu XiongHao  </p>
   </div>
   <!-- end .container --></div>
 </body>
