--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <hr />
-  <p>All rights reserved by Liu XiongHao  </p>
+  <p><center></center>All rights reserved by Liu XiongHao</center></p>
   </div>
   <!-- end .container --></div>
 </body>
