--- a/index.html
+++ b/index.html
@@ -165,9 +165,8 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
   </table>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p>&nbsp;</p>
   <hr />
-  <p><center></center>All rights reserved by Liu XiongHao</center></p>
+  <p><center>All rights reserved by Liu XiongHao</center></p>
   </div>
   <!-- end .container --></div>
 </body>
